# ros_realistic_error_generation

./: MANIFEST.in  README.md  package.xml  pyproject.toml  ros2-error-injection-devel.repos.yaml  setup.cfg  setup.py
realistic_error_generation/: error_generator_srv.py  example_error_generator_client.py  example_topic_pub.py  test_pytorch.py  utils.py
realistic_error_generation/resources/sample_neural_net_dataset4/: final_weights.pth  output_normalizer.json  test_lr0.001_bs8.npy
realistic_error_injection/: error_generator_srv.py  error_injection_srv.py  example_error_generator_client.py  example_topic_pub.py  test_pytorch.py  utils.py
realistic_error_injection/resources/sample_neural_net_dataset4/: dataset_info.json  input_normalizer.json
