[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "realistic_error_generation"
version = "0.1.0"
description = "TODO: Package description"
authors = [
    { name="juan95", email="jbarrag3@jh.edu" }
]
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    # Add your dependencies here, e.g. "numpy", "torch"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["realistic_error_generation", "realistic_error_generation.resources"]
